--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div class="container d-flex justify-content-center mt-3">
+  <div class="card">
+      <div class="card-header">
+          <ul class="nav nav-tabs">
+              <li class="nav-item">
+                <a class="nav-link active" routerLink="/login">Iniciar Sesión</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/signup">Crear Cuenta</a>
+              </li>
+
+            </ul>
+      </div>
+      <div class="card-body">
+          <form #f="ngForm" novalidate (ngSubmit)="onLogin()">
+              <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" id="email" class="form-control"
+                  [(ngModel)]="email" required>
+              </div>
+              <div class="form-group">
+                  <label for="password">Contraseña</label>
+                  <input type="password" name="password" id="password" class="form-control"
+                  [(ngModel)]="password" required>
+              </div>
+              <div class="form-group mt-2">
+                  <button type="submit" class="btn btn-outline-success w-100" [disabled]="!f.valid">
+                      <i class="fas fa-sign-in-alt"></i> Iniciar Sesión</button>
+              </div>
+              <div class="form-group mt-2">
+                  <button type="button" class="btn btn-outline-danger w-100" [disabled]="f.valid" (click)="onLoginGoogle()">
+                      <i class="fab fa-google"></i> Google</button>
+              </div>
+          </form>
+      </div>
+  </div>
+</div>
