--- a/src/app/shared/components/nav-menu/nav-menu.component.html
+++ b/src/app/shared/components/nav-menu/nav-menu.component.html
@@ -14,8 +14,8 @@
             nav.pais
           </a>
           <ul class="dropdown-menu dropdown-menu-dark">
-            <li><a class="dropdown-item"  translate>nav.peru</a></li>
-            <li><a class="dropdown-item" >EEUU</a></li>
+            <li><a class="dropdown-item" (click)="changeLang('es')" translate>nav.peru</a></li>
+            <li><a class="dropdown-item"  (click)="changeLang('en')">EEUU</a></li>
           </ul>
         </li>
         <li><a href="#" class="nav-link px-2 text-white">About</a></li>
@@ -29,10 +29,10 @@
           <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
           <strong>User</strong>
         </a>
-        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" style="">
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
           <li><a class="dropdown-item" href="#">New project...</a></li>
           <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" [routerLink]="['/profile']">Profile</a></li>
+          <li><a class="dropdown-item"[routerLink]="['/profile']">Profile</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
