add user groups

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -14,6 +14,7 @@
               <th>Username</th>
               <th>Nickname</th>
               <th>Email</th>
+              <th>Rol</th>
           </tr>
       </thead>
       <tbody>
@@ -21,6 +22,7 @@
               <td>{{attributes.given_name}}</td>
               <td>{{attributes.nickname}}</td>
               <td>{{attributes.email}}</td>
+              <td>{{attributes.rol}}</td>
           </tr>
       </tbody>
     </table>
